macros/tests/sig2-fail.stderr
error: Unexpected argument: `extra`
 --> tests/sig2-fail.rs:6:58
  |
6 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |                                                          ^^^^^^^^^

error: Unexpected argument: `extra2`
 --> tests/sig2-fail.rs:6:69
  |
6 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |                                                                     ^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/sig2-fail.rs:6:4
  |
6 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |    ^^^^^^ incorrect number of function parameters
  |
  = note: expected fn pointer `fn(EfiHandle, SystemTable<Boot>) -> Result<_, _>`
                found fn item `fn(EfiHandle, SystemTable<Boot>, (), ()) -> Result<_, _> {e_main}`
  = note: when the arguments and return types match, functions can be coerced to function pointers

error[E0061]: this function takes 4 arguments but 2 arguments were supplied
 --> tests/sig2-fail.rs:6:4
  |
5 | #[macros::entry]
  | ---------------- two arguments of type `()` and `()` are missing
6 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |    ^^^^^^
  |
note: function defined here
 --> tests/sig2-fail.rs:6:4
  |
6 | fn e_main(_handle: EfiHandle, _table: SystemTable<Boot>, extra: (), extra2: ()) -> Result<()> {
  |    ^^^^^^ ------------------  -------------------------  ---------  ----------
help: provide the arguments
  |
5 | e_main(#[macros::entry], #[macros::entry], (), ())
  |
